# agate-cli

./: .gitmodules  CMakeLists.txt  README.md  agate-cli.c  config.h.in
